[ADD] Implement heat equation [no ci]

--- a/paper/sections/appendix.tex
+++ b/paper/sections/appendix.tex
@@ -31,7 +31,8 @@
 \section{Inverting the Sum of Two Kronecker Matrices}\label{sec:inverse_kronecker_sum}
 \input{sections/inverse_kronecker_sum}
 
-
+\section{Heat Equation}\label{sec:heat_equation}
+\input{sections/heat_equation.tex}
 
 \section{Taylor-Mode Automatic Differentiation \& Forward Laplacian}
 \input{sections/taylor_mode_forward_laplacian.tex}
