--- a/paper/preamble/custom.tex
+++ b/paper/preamble/custom.tex
@@ -20,6 +20,7 @@
 % ===================================================================
 % FIGURES & COLORS
 % ===================================================================
+\usepackage{subcaption} % \subfigure environment
 \usepackage{tikz} % for drawings in LaTeX
 \usetikzlibrary{arrows.meta} % for prettier arrows
 
