--- a/paper/sections/appendix.tex
+++ b/paper/sections/appendix.tex
@@ -25,6 +25,9 @@
 \printcontents[sections]{l}{1}{\setcounter{tocdepth}{2}}
 \vspace{2em}
 
+\section{Experimental Details and Additional Results}
+\input{sections/experimental_details.tex}
+
 \section{Example: Laplacian for a Shallow Network}
 \input{sections/laplacian_shallow_net.tex}
 
