--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -1,3 +1,11 @@
+\begin{figure}[tb]
+  \centering
+  \includegraphics{../kfac_pinns_exp/exp17_groupplot_poisson2d/loss.pdf}
+  \caption{Scaling behaviour of different optimizers for learning the solution of a 2d-Poisson equation w.r.t.
+    neural network size under a given time budget of $10^3\,\text{s}$ on an RTX 6000 GPU.}
+  \label{fig:pedagogical-example}
+\end{figure}
+
 \subsection{Setup}
 
 Small-scale example (2D Poisson?)
