Update on Overleaf.

--- a/paper/sections/appendix.tex
+++ b/paper/sections/appendix.tex
@@ -25,20 +25,23 @@
 \printcontents[sections]{l}{1}{\setcounter{tocdepth}{2}}
 \vspace{2em}
 
-\section{Example: Laplacian for a Shallow Network}
-\input{sections/laplacian_shallow_net.tex}
+\section{The Computations for the Different KFACs}
+\input{sections/kfacs}
+
+%\section{Example: Laplacian for a Shallow Network}
+%\input{sections/laplacian_shallow_net.tex}
 
 \section{Inverting the Sum of Two Kronecker Matrices}\label{sec:inverse_kronecker_sum}
 \input{sections/inverse_kronecker_sum}
 
-\section{Heat Equation}\label{sec:heat_equation}
-\input{sections/heat_equation.tex}
+%\section{Heat Equation}\label{sec:heat_equation}
+%\input{sections/heat_equation.tex}
 
-\section{Taylor-Mode Automatic Differentiation \& Forward Laplacian}
-\input{sections/taylor_mode_forward_laplacian.tex}
+%\section{Taylor-Mode Automatic Differentiation \& Forward Laplacian}
+%\input{sections/taylor_mode_forward_laplacian.tex}
 
-\section{Backpropagation Perspective of the Laplacian}
-\input{sections/backpropagation_perspective.tex}
+%\section{Backpropagation Perspective of the Laplacian}
+%\input{sections/backpropagation_perspective.tex}
 
 
 %%% Local Variables:
