--- a/paper/references.bib
+++ b/paper/references.bib
@@ -436,3 +436,25 @@
   volume={32},
   year={2019}
 }
+
+@article{heskes2000natural,
+  title={On “natural” learning and pruning in multilayered perceptrons},
+  author={Heskes, Tom},
+  journal={Neural Computation},
+  volume={12},
+  number={4},
+  pages={881--901},
+  year={2000},
+  publisher={MIT Press}
+}
+
+@article{yu2018deep,
+  title={The deep Ritz method: a deep learning-based numerical algorithm for solving variational problems},
+  author={Yu, Bing and E, Weinan},
+  journal={Communications in Mathematics and Statistics},
+  volume={6},
+  number={1},
+  pages={1--12},
+  year={2018},
+  publisher={Springer}
+}
