Update on Overleaf.

--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -20,8 +20,9 @@ More precisely, we summarize our contributions as follows:
     \begin{equation*}
         G(\theta)_{ij}
         =
-        \int_\Omega \Delta \partial_{\theta_i} u_\theta \Delta \partial_{\theta_j} u_\theta \, \mathrm dx 
+        \int_\Omega \Delta \partial_{\theta_i} u_\theta \Delta \partial_{\theta_j} u_\theta \, \mathrm dx, 
     \end{equation*}
+    where 
     
     
     \todo{I put the Gramian and a tiny explanation of KFAC as many PINN people will not know this.}
