Update on Overleaf.

--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -22,7 +22,7 @@ More precisely, we summarize our contributions as follows:
         =
         \int_\Omega \Delta \partial_{\theta_i} u_\theta \Delta \partial_{\theta_j} u_\theta \, \mathrm dx, 
     \end{equation*}
-    where 
+    where $u_\theta$ denotes the neural network ansatz
     
     
     \todo{I put the Gramian and a tiny explanation of KFAC as many PINN people will not know this.}
