[TEX] Rough pseudo-code for KFAC on the Poisson equation

--- a/paper/sections/appendix.tex
+++ b/paper/sections/appendix.tex
@@ -28,6 +28,9 @@
 \section{The Computations for the Different KFACs}
 \input{sections/kfacs}
 
+\section{Pseudo-Code: KFAC for the Poisson Equation}
+\input{sections/pseudocode_poisson.tex}
+
 %\section{Example: Laplacian for a Shallow Network}
 %\input{sections/laplacian_shallow_net.tex}
 
