--- a/paper/main.tex
+++ b/paper/main.tex
@@ -33,7 +33,7 @@
   have shown promising performance. 
   However, they come with a high computational cost per iteration. 
   Using higher-order forward mode differentiation, we propose a Kronecker-Factored approximation of the Gauß-Newton matrix that involves PDE-specific terms. 
-  We provide an efficient implementation and an experimental evaluation. 
+  We provide an efficient implementation and an experimental evaluation targeting large neural networks and PDEs posed in high spatial dimensions. 
   %To train PINNs efficiently, it has been observed that taking the geometry implied by the PDE operator.
   %Existing methods that consider this geometry compute and invert the full Gramian.
   %However, these ENGD-based methods do not scale well to architectures with many parameters due to the quadratic memory and cubic time complexity of storing and inverting the Gramian.
@@ -54,7 +54,7 @@
 
 \input{sections/contribution.tex}
 
-\section{Experiments}
+\section{Experiments}\label{sec:experiments}
 
 \input{sections/experiments.tex}
 
